--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/plugin-proposal-decorators": "^7.21.0",
     "@types/bootstrap": "^5.2.6",
     "@types/jest": "^29.5.1",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "react-test-renderer": "^18.2.0"
   }
 }
